# beacon-py

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
Documents/: CH1-quick_start.ipynb  CH2-beacon_function.ipynb
Tuto/: Tutorial_seqARIMA.ipynb
beacon/: Calc.py  DQ.py  FS.py  IO.py  Pipe.py  QT.py  TS.py  __init__.py  etc.py  plot.py  seqARIMA.py
beacon-test/: large_event_snr-latest.ipynb  large_event_snr.ipynb  write_xml.ipynb
beacon-test/bayestar-test/: 0.fits
beacon-test/beacon_data/: Strain_H1.gwf  Strain_L1.gwf
beacon/_burg/: burg.c  burgmodule.c
pe/: README.md
sky-localization/: inspiral_range.ipynb  sky-localization.ipynb  write_xml.ipynb
